Generovani dat do hlavicky aplikacni vrstvy + animace notifikaci

--- a/src-front/less/layout/_header.less
+++ b/src-front/less/layout/_header.less
@@ -42,8 +42,12 @@
           position: relative;
           z-index: @mini-alert-zi;
 
-          .notification-icon.active {
-            color: @red;
+          .notification-icon {
+            cursor: pointer;
+
+            &.active {
+              color: @red;
+            }
           }
 
           .notifications-box {
