--- a/src-front/templates/aplikacni-vrstva/prehled.html
+++ b/src-front/templates/aplikacni-vrstva/prehled.html
@@ -29,7 +29,7 @@
                 <div class="notifications">
                     <i class="notifications-i notification-icon active" id="_show-notifications-b"></i>
 
-                    <div class="notifications-box active">
+                    <div class="notifications-box" id="_notifications-box">
                         <div class="notification">Veronika Zemanová s vámi sdílela poznámku</div>
                         <div class="notification">Veronika Zemanová s vámi sdílela upozornění</div>
                         <!-- TODO: Dynamicky generované -->
@@ -951,5 +951,7 @@
         <a class="contact-email" href="mailto:moje-studium@ceskydj.cz">moje-studium@ceskydj.cz</a>
     </p>
 </footer>
+
+<script src="/js/application/header-animations.js"></script>
 </body>
 </html>
