Zprovozneni AJAX pozadavku. Mazani notifikaci po otevreni. Aktualizace Mamuta

--- a/src/views/Application/#layout.latte
+++ b/src/views/Application/#layout.latte
@@ -95,7 +95,12 @@
 {* TODO: Pro aktivaci odebrat třídu hide *}
 <div class="alert-container hide"></div>
 
+{* Libraries *}
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/js/lib/axios/config.js"></script>
+{* Own scripts *}
+<script src="/js/application/header-control.js"></script>
+{* Content view requested scripts *}
 {block js}{/block}
-<script src="/js/application/header-animations.js"></script>
 </body>
 </html>
