--- a/src/views/Presentation/#layout.latte
+++ b/src/views/Presentation/#layout.latte
@@ -59,6 +59,11 @@
     </p>
 </footer>
 
+{* Libraries *}
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/js/lib/axios/config.js"></script>
+{* Own scripts *}
+{* Content view requested scripts *}
 {block js}{/block}
 </body>
 </html>
