Sjednoceni kontroleru LogController a RegisterController na SignController

--- a/src/views/Presentation/#layout.latte
+++ b/src/views/Presentation/#layout.latte
@@ -28,8 +28,8 @@
         <div class="other-content">
             {if !isset($user)}
             <div class="not-logged-user-actions">
-                <a class="link-button" href="/log/in">Přihlásit se</a>
-                <a class="link-button white-bg" href="/register">Registrovat se</a>
+                <a class="link-button" href="/sign/in">Přihlásit se</a>
+                <a class="link-button white-bg" href="/sign/up">Registrovat se</a>
             </div>
             {else}
                 {* TODO: Content for logged in users *}
