--- a/src/views/Application/#layout.latte
+++ b/src/views/Application/#layout.latte
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <i class="hamburger-menu-i open-close-button" id=_menu-control-b"></i>
-                <a class="action-link logout" href="/log/out">Odhlásit se</a>
+                <a class="action-link logout" href="/sign/out">Odhlásit se</a>
             </div>
         </div>
     </section>
