Vyber tridy (+ presmerovani po prvnim prihlaseni). Aktualizace Mamuta a dalsich knihoven

--- a/src/views/Application/select-class.latte
+++ b/src/views/Application/select-class.latte
@@ -8,7 +8,7 @@
 
 
         <section class="content-container">
-            <form method="post" action="#" class="app-form">
+            <form method="post" action="" class="app-form">
                 <p class="form-top-text">
                     Pokud chceš využívat Moje Studium naplno, nezapomeň se přidat ke své třídě.
                     Odemkne se ti možnost sdílení poznámek, termínů a souborů přímo se spolužáky.
@@ -16,26 +16,22 @@
 
                 <div class="form-inputs">
                     <div class="form-full-width-select-row">
-                        <select name="school" class="full-width-select" title="Vyber svoji školu ze seznamu" autofocus>
+                        <select name="school" class="full-width-select" id="_choose-school-select" title="Vyber svoji školu ze seznamu" autofocus>
                             <option selected disabled>Vyber školu</option>
-                            <option name="1">Střední průmyslová škola elektrotechnická a Vyšší odborná škola Pardubice</option>
-                            <option name="2">SUPŠ Helenín</option>
-                            <!-- TODO: Automatické generování -->
+                            <option n:foreach="$schools as $school" value="{$school->getId()}">{$school->getName()}</option>
                         </select>
 
-                        <p class="form-descriptive-text">Tvoje škola není v seznamu? <a href="#" class="basic-link">Kontaktuj nás!</a></p>
+                        <p class="form-descriptive-text">Tvoje škola není v seznamu? <a href="mailto:moje-studium@ceskydj.cz" class="basic-link">Kontaktuj nás!</a></p>
                     </div>
                 </div>
                 <div class="form-inputs">
                     <div class="form-full-width-select-row">
-                        <select name="class" class="full-width-select" title="Vyber svoji třídu ze seznamu" autofocus>
-                            <option selected disabled>Vyber třídu</option>
-                            <option name="1">4.F (od 2016/17)</option>
-                            <option name="2">3.C (od 2017/18)</option>
-                            <!-- TODO: Automatické generování -->
+                        <select name="class" class="full-width-select" id="_choose-class-select" title="Vyber svoji třídu ze seznamu" autofocus>
+                            <option disabled selected id="_choose-school-option">Nejprve vyber školu</option>
+                            <option disabled id="_choose-class-option">Vyber třídu</option>
                         </select>
 
-                        <p class="form-descriptive-text">Nevidíš svoji třídu? Neváhej a <a href="#" class="basic-link">přidej ji!</a></p>
+                        <p class="form-descriptive-text">Nevidíš svoji třídu? Neváhej a <a href="/application/class/create" class="basic-link">přidej ji!</a></p>
                     </div>
                 </div>
 
@@ -45,15 +41,19 @@
                 </p>
 
                 <div class="form-alerts">
-                    <p class="form-alert negative">Nebyla vyplněna všechna pole.</p>
-                    <p class="form-alert positive">Tvá žádost o přidání do třídy byla úspěšně odeslána.</p>
+                    <p n:foreach="(array)$messages as $message" n:class="form-alert, $message['type']">{$message['text']}</p>
                 </div>
+                {* Tvá žádost o přidání do třídy byla úspěšně odeslána. *}
 
                 <div class="form-control">
-                    <a href="#" class="form-button secondary">Nechci vybírat svou třídu</a>
+                    <a href="/application/class/select/delay" class="form-button secondary">Nechci vybírat svou třídu</a>
                     <input type="submit" value="Hotovo" class="form-button" />
                 </div>
             </form>
         </section>
     </div>
+{/block}
+
+{block js}
+<script src="js/application/form-control.js"></script>
 {/block}
