--- a/src/views/Application/create-class.latte
+++ b/src/views/Application/create-class.latte
@@ -8,37 +8,32 @@
 
 
         <section class="content-container">
-            <form method="post" action="#" class="app-form">
+            <form method="post" action="" class="app-form">
                 <div class="form-inputs">
                     <div class="form-full-width-select-row">
                         <select name="school" class="full-width-select" title="Vyber svoji školu ze seznamu" autofocus>
                             <option selected disabled>Vyber školu</option>
-                            <option name="1">Střední průmyslová škola elektrotechnická a Vyšší odborná škola Pardubice</option>
-                            <option name="2">SUPŠ Helenín</option>
+                            <option n:foreach="$schools as $school" value="{$school->getId()}">{$school->getName()}</option>
                         </select>
 
-                        <p class="form-descriptive-text">Tvoje škola není v seznamu? <a href="#" class="basic-link">Kontaktuj nás!</a></p>
+                        <p class="form-descriptive-text">Tvoje škola není v seznamu?
+                            <a href="mailto:moje-studium@ceskydj.cz" class="basic-link">Kontaktuj nás!</a></p>
                     </div>
 
                     <div class="form-input-row">
                         <label for="class-name" class="form-label">Název třídy</label>
                         <input name="class-name" type="text" id="class-name" class="form-input" placeholder="např. 1.A, 3.F" />
-                        <i class="form-input-status positive"></i>
+                        {*<i class="form-input-status positive"></i>*}
                     </div>
                     <div class="form-input-row">
                         <label for="start-year" class="form-label">Počíteční školní rok</label>
-                        <!-- TODO: Automaticky změnit školní rok na aktuální -->
-                        <input name="start-year" type="text" id="start-year" class="form-input select-input start-year" readonly value="2019/2020" />
+                        <input name="start-year" type="text" id="start-year" class="form-input select-input start-year" readonly value="{end($startYears)}" />
                         <div class="select-input-buttons _select-input-buttons" data-for="start-year">
                             <i class="select-button-down-i select-button down _button" data-type="down"></i>
                             <i class="select-button-up-i select-button up _button" data-type="up"></i>
 
-                            <!-- TODO: Automatické generování přípustných hodnot -->
                             <div class="_data hide">
-                                <span class="_item" data-value="2016/2017" data-default="false"></span>
-                                <span class="_item" data-value="2017/2018" data-default="false"></span>
-                                <span class="_item" data-value="2018/2019" data-default="false"></span>
-                                <span class="_item" data-value="2019/2020" data-default="true"></span>
+                                <span n:foreach="$startYears as $startYear" class="_item" data-value="{$startYear}" {last}data-default="true"{/last}></span>
                             </div>
                         </div>
                     </div>
@@ -65,7 +60,7 @@
                 </div>
 
                 <div class="form-alerts">
-                    <p class="form-alert negative">Nebyla vyplněna všechna pole.</p>
+                    <p n:foreach="(array)$messages as $message" n:class="form-alert, $message['type']">{$message['text']}</p>
                 </div>
 
                 <div class="form-control">
@@ -74,4 +69,8 @@
             </form>
         </section>
     </div>
+{/block}
+
+{block js}
+<script src="js/application/form-control.js"></script>
 {/block}
