Do uvodni stranky pridan odkaz do aplikace (prihlaseny uzivatel)

--- a/src-front/less/components/_buttons.less
+++ b/src-front/less/components/_buttons.less
@@ -40,6 +40,10 @@
   &:extend(.button);
   font-size: .75em;
 
+  &:hover {
+    background: fade(@black, 3%);
+  }
+
   &.white-bg {
     background: @white;
 
