--- a/src-front/less/layout/_header.less
+++ b/src-front/less/layout/_header.less
@@ -88,7 +88,7 @@
         }
       }
 
-      .not-logged-user-actions {
+      .presentation-user-actions {
         display: flex;
         justify-content: flex-end;
       }
