--- a/src-front/templates/prezentacni-vrstva/uvod.html
+++ b/src-front/templates/prezentacni-vrstva/uvod.html
@@ -18,9 +18,10 @@
         <h1 class="main-heading">Moje Studium</h1>
 
         <div class="other-content">
-            <div class="not-logged-user-actions">
-                <a class="link-button" href="#">Přihlásit se</a>
-                <a class="link-button white-bg" href="#">Registrovat se</a>
+            <div class="presentation-user-actions">
+                <a class="link-button" href="#"><i class="arrow-right-i"></i> Přejít do aplikace <i class="arrow-right-i"></i></a>
+<!--                <a class="link-button" href="#">Přihlásit se</a>-->
+<!--                <a class="link-button white-bg" href="#">Registrovat se</a>-->
             </div>
         </div>
     </section>
