--- a/src/views/Presentation/#layout.latte
+++ b/src/views/Presentation/#layout.latte
@@ -32,7 +32,7 @@
                 <a class="link-button white-bg" href="/sign/up">Registrovat se</a>
             </div>
             {else}
-                {* TODO: Content for logged in users *}
+                <a class="link-button" href="/application/"><i class="arrow-right-i"></i> Přejít do aplikace <i class="arrow-right-i"></i></a>
             {/if}
         </div>
     </section>
