Profilovy obrazek uzivatele v hlavicce + priprava na obecne nasazeni

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -158,3 +158,26 @@
   .icon(@fa-var-trash, "r");
 }
 // END spravce souboru
+
+
+// START profilove obrazky
+.graduation-cap-p-i {
+  .icon(@fa-var-graduation-cap, "d");
+}
+
+.hat-cowboy-p-i {
+  .icon(@fa-var-hat-cowboy, "d");
+}
+
+.hat-winter-p-i {
+  .icon(@fa-var-hat-winter, "d");
+}
+
+.hat-witch-p-i {
+  .icon(@fa-var-hat-witch, "d");
+}
+
+.hood-cloak-p-i {
+  .icon(@fa-var-hood-cloak, "d");
+}
+// END profilove obrazky
