--- a/src-front/less/core.less
+++ b/src-front/less/core.less
@@ -74,6 +74,7 @@
 @import "components/_school";
 @import "components/_control-bars";
 @import "components/_graphs";
+@import "components/_profile-images";
 
 
 /*
