--- a/src-front/less/pages/_summary.less
+++ b/src-front/less/pages/_summary.less
@@ -32,12 +32,10 @@
       @media screen and (min-width: @tablet) {
         .author {
           .profile-image {
-            width: @font-s + .3em;
-            height: @font-s + .3em;
             border-radius: 100%;
-            background: @light-green;
             display: inline-block;
             margin: 0 .2em;
+            font-size: @font-s - .1em;
           }
         }
       }
