--- a/src-front/templates/aplikacni-vrstva/prehled.html
+++ b/src-front/templates/aplikacni-vrstva/prehled.html
@@ -20,6 +20,7 @@
         <div class="other-content">
             <div class="logged-user-info">
                 <!-- TODO: Dynamicky generované -->
+                <i class="profile-image graduation-cap-p-i"></i>
                 <span class="full-name">Adéla Vyhnálková</span>
                 <span class="short-name">Adéla V.</span>
                 <span class="class">4.ER</span>
@@ -615,7 +616,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Veronika Zemanová
                                     <span class="date">29. 11.</span>
                                 </div>
@@ -638,7 +639,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Dominik Švejda
                                     <span class="date">29. 11.</span>
                                 </div>
@@ -661,7 +662,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Alena Brabcová
                                     <span class="date">29. 11.</span>
                                 </div>
@@ -684,7 +685,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Veronika Zemanová
                                     <span class="date">29. 11.</span>
                                 </div>
@@ -707,7 +708,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Barbora Šedová
                                     <span class="date">29. 11.</span>
                                 </div>
@@ -745,7 +746,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Veronika Zemanová
                                 </div>
                             </td>
@@ -768,7 +769,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Dominik Švejda
                                 </div>
                             </td>
@@ -791,7 +792,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Alena Brabcová
                                 </div>
                             </td>
@@ -814,7 +815,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Barbora Šedová
                                 </div>
                             </td>
@@ -852,7 +853,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Veronika Zemanová
                                 </div>
                             </td>
@@ -872,7 +873,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Dominik Švejda
                                 </div>
                             </td>
@@ -892,7 +893,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Alena Brabcová
                                 </div>
                             </td>
@@ -914,7 +915,7 @@
                             </td>
                             <td class="author">
                                 <div class="author-container">
-                                    <span class="profile-image"></span>
+                                    <i class="profile-image graduation-cap-p-i"></i>
                                     Barbora Šedová
                                 </div>
                             </td>
