--- a/src/views/Application/#layout.latte
+++ b/src/views/Application/#layout.latte
@@ -27,6 +27,7 @@
 
         <div class="other-content">
             <div class="logged-user-info">
+                <i class="profile-image {$profileIcon}-p-i" style="color: {$profileIconColor}"></i>
                 <span class="full-name">{$user->getData()->getFullName()}</span>
                 <span class="short-name">{$user->getData()->getShortName()}</span>
                 <span class="class" n:if="$user->getClass() !== null">{$user->getClass()->getName()}</span>
