--- a/src-front/less/layout/_header.less
+++ b/src-front/less/layout/_header.less
@@ -14,6 +14,10 @@
       .logged-user-info {
         font-weight: bold;
 
+        .profile-image {
+          margin-right: .4em;
+        }
+
         .class {
           margin-left: .4em;
         }
@@ -34,6 +38,8 @@
       }
 
       .actions {
+        display: flex;
+        align-items: center;
         margin-left: 1.4em;
 
         .notifications {
