Zapomenuta zmena tridy v layoutu prezentacni vrstvy

--- a/src/views/Presentation/#layout.latte
+++ b/src/views/Presentation/#layout.latte
@@ -27,7 +27,7 @@
 
         <div class="other-content">
             {if !isset($user)}
-            <div class="not-logged-user-actions">
+            <div class="presentation-user-actions">
                 <a class="link-button" href="/sign/in">Přihlásit se</a>
                 <a class="link-button white-bg" href="/sign/up">Registrovat se</a>
             </div>
