Dynamicke generovani obsahu v Prehledu

--- a/src-front/less/components/_icons.less
+++ b/src-front/less/components/_icons.less
@@ -68,12 +68,72 @@
   .icon(@fa-var-folder-open, "d");
 }
 
+.file-i {
+  .icon(@fa-var-file, "s");
+}
+
 .file-text-document-i {
-  .icon(@fa-var-file-alt, "d");
+  .icon(@fa-var-file-word, "d");
+}
+
+.file-sheet-document-i {
+  .icon(@fa-var-file-excel, "s");
+}
+
+.file-presentation-document-i {
+  .icon(@fa-var-file-powerpoint, "s");
+}
+
+.file-pdf-i {
+  .icon(@fa-var-file-pdf, "s");
+}
+
+.file-php-i {
+  .icon(@fa-var-php, "b");
+}
+
+.file-html-i {
+  .icon(@fa-var-html5, "b");
+}
+
+.file-css-i {
+  .icon(@fa-var-css3-alt, "b");
+}
+
+.file-js-i {
+  .icon(@fa-var-js-square, "b");
+}
+
+.file-source-code-i {
+  .icon(@fa-var-file-code, "s");
+}
+
+.file-executable-i {
+  .icon(@fa-var-play, "s");
+}
+
+.file-archive-i {
+  .icon(@fa-var-file-archive, "s");
+}
+
+.file-database-i {
+  .icon(@fa-var-database, "s");
+}
+
+.file-font-i {
+  .icon(@fa-var-font-case, "s");
 }
 
 .file-image-i {
   .icon(@fa-var-image, "d");
+}
+
+.file-audio-i {
+  .icon(@fa-var-file-audio, "s");
+}
+
+.file-video-i {
+  .icon(@fa-var-file-video, "s");
 }
 // END typy souboru a adresar
 
