--- a/src/views/Application/#layout.latte
+++ b/src/views/Application/#layout.latte
@@ -27,8 +27,7 @@
 
         <div class="other-content">
             <div class="logged-user-info">
-                {var $profileImage = $user->getProfileImage()}
-                <i class="profile-image {$profileImage->getIcon()->getName()}-p-i" style="background-color: {$profileImage->getBackgroundColor()}; color: {$profileImage->getIconColor()}"></i>
+                {$user->getProfileImageHTML()|noescape}
                 <span class="full-name">{$user->getData()->getFullName()}</span>
                 <span class="short-name">{$user->getData()->getShortName()}</span>
                 <span class="class" n:if="$user->getClass() !== null">{$user->getClass()->getName()}</span>
